--- a/foundations/06-cascade-fix/style.css
+++ b/foundations/06-cascade-fix/style.css
@@ -1,5 +1,5 @@
 body {
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: Arial, Helvetica;
 }
 
 .para,
@@ -8,17 +8,16 @@ body {
   font-weight: 800;
 }
 
-.small-para {
+.para.small-para {
   font-size: 14px;
-  font-weight: 800;
 }
 
 .para {
-  font-size: 22px;
+  font-size: 28px;
 }
 
-.confirm {
-  background: green;
+#confirm-button {
+  background-color: green;
   color: white;
   font-weight: bold;
 } 
@@ -35,7 +34,7 @@ body {
   font-size: 14px;
 }
 
-div.text {
+div.text.text-child {
   color: rgb(0, 0, 0);
   font-size: 22px;
   font-weight: 100;
