--- a/margin-and-padding/02-margin-and-padding-2/style.css
+++ b/margin-and-padding/02-margin-and-padding-2/style.css
@@ -1,27 +1,41 @@
 body {
-  background: #eee;
+  background:red;
   font-family: sans-serif;
+  padding: 8px;
 }
 
 .card {
   width: 400px;
   background: #fff;
   margin: 16px auto;
+  padding: 8px;
 }
 
 .title {
-  background: #e3f4ff;
+  background: red;
+  font-size: 16px;
+  padding: 8px;
+  margin-top: 0;
+  margin-bottom: 8px;
 }
 
 .content {
-  background: #e3f4ff;
+  background:red;
+  margin-bottom: 8px;
+  padding: 16px 8px;
 }
 
 .button-container {
-  background: #e3f4ff;
+  background: red;
+  text-align: center;
+  padding: 8px;
+  
 }
 
 button {
-  background: white;
+  background: red;
   border: 1px solid #eee;
+  display: block;
+  margin: 0 auto;
+  padding: 8px 24px;
 }
