--- a/flex/05-flex-modal/style.css
+++ b/flex/05-flex-modal/style.css
@@ -20,6 +20,28 @@ body {
   width: 480px;
   border-radius: 10px;
   box-shadow: 2px 4px 16px rgba(0,0,0,.2);
+  display: flex;
+  padding:16px;
+  gap: 16px;
+}
+
+/* .container{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+} */
+
+.header{
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  font-size: 18px;
+  font-weight: 700;
+  margin-bottom: 8px;
+}
+
+.text{
+  margin-bottom:18px;
 }
 
 .icon {
@@ -33,7 +55,11 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
+
+  flex-shrink: 0;
 }
+
+
 
 .close-button {
   background: #eee;
