--- a/flex/03-flex-header-2/style.css
+++ b/flex/03-flex-header-2/style.css
@@ -12,6 +12,23 @@ body {
   background: white;
   border-bottom: 1px solid #ddd;
   box-shadow: 0 0 8px rgba(0,0,0,.1);
+  display: flex;
+  justify-content: center;
+  padding: 8px;
+}
+
+.left,.right{
+    display: flex;
+    align-items: center;
+    gap: 16px;
+}
+
+.left{
+  justify-content: flex-start;
+}
+
+.right{
+  justify-content: flex-end;
 }
 
 .profile-image {
@@ -22,6 +39,7 @@ body {
   height: 48px;
 }
 
+
 .logo {
   color: rebeccapurple;
   font-size: 32px;
@@ -29,12 +47,15 @@ body {
   font-style: italic;
 }
 
+
 button {
   border: none;
   border-radius: 8px;
   background: rebeccapurple;
   color: white;
   padding: 8px 24px;
+  display: flex;
+  flex: 1;
 }
 
 a {
@@ -45,4 +66,8 @@ a {
 
 ul {
   list-style-type: none;
+  display: flex;
+  gap: 16px;
+  margin: 0;
+  padding: 0;
 }
