--- a/flex/06-flex-layout/style.css
+++ b/flex/06-flex-layout/style.css
@@ -7,6 +7,44 @@ body {
   font-family: Roboto, sans-serif;
 }
 
+.header,.footer{
+  display: flex;
+  gap : 16px ;
+}
+
+.left-links{
+  display: flex;
+  gap: 20px;
+  padding: 16px;
+}
+
+.right-links{
+  display: flex;
+  justify-content: flex-end;
+  flex-grow: 1;
+  gap: 20px;
+  padding: 16px;
+}
+
+.image-container{
+  display: flex;
+  justify-content: center;
+}
+
+.input{
+  display: flex;
+  justify-content: center;
+}
+
+.buttons{
+  display: flex;
+  justify-content: center;
+}
+
+ul{
+  list-style-type: none;
+}
+
 img {
   width: 600px;
 }
